[package]
name = "iced_fonts"
description = "Include fonts via feature flags in your Iced project!"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
authors.workspace = true

[workspace.package]
version = "0.2.99"
edition = "2024"
license = "MIT"
homepage = "https://iced.rs"
repository = "https://github.com/Redhawk18/iced_fonts"
keywords = ["gui", "iced", "fonts"]
categories = ["gui"]
readme = "README.md"
authors = [ "Redhawk18" ]

[features]
default = []
bootstrap = []
codicon = []
devicon = []
fontawesome = []
lucide = []
material = []
nerd = []
octicons = []
pomicons = []
full = [
    "bootstrap",
    "codicon",
    "devicon",
    "fontawesome",
    "lucide",
    "material",
    "nerd",
    "octicons",
    "pomicons",
]

[workspace]
members = ["macros"]

[dev-dependencies]
#iced = "0.13.99"
iced = { git = "https://github.com/project-gauntlet/iced.git", branch = "gauntlet-0.13.1" }

[dependencies]
iced_fonts_macros = {path = "macros"}

iced_core.workspace = true
iced_widget.workspace = true

[workspace.dependencies]
#iced_core = "0.13.99" # Iced core has the text widget, which is the only one we need.
iced_core = { git = "https://github.com/project-gauntlet/iced.git", branch = "gauntlet-0.13.1" }
#iced_widget = "0.13.99" # TODO
iced_widget = { git = "https://github.com/project-gauntlet/iced.git", branch = "gauntlet-0.13.1" }
proc-macro2 = "1"
quote = "1"
syn = "2"
ttf-parser = "0.25"


#[patch.crates-io]
#iced = { path = "../../RustroverProjects/iced-fork" }
#iced_core = { path = "../../RustroverProjects/iced-fork/core" }
#iced_widget = { path = "../../RustroverProjects/iced-fork/widget" }

[package.metadata.docs.rs]
features = ["full"]
rustdoc-args = ["--document-private-items"]

[[example]]
name = "bootstrap"
required-features = ["bootstrap"]

[[example]]
name = "codicon"
required-features = ["codicon"]

[[example]]
name = "custom"

[[example]]
name = "devicon"
required-features = ["devicon"]

[[example]]
name = "fontawesome"
required-features = ["fontawesome"]

[[example]]
name = "lucide"
required-features = ["lucide"]

[[example]]
name = "nerd"
required-features = ["nerd"]

[[example]]
name = "octicons"
required-features = ["octicons"]

[[example]]
name = "pomicons"
required-features = ["pomicons"]
